[gd_scene load_steps=4 format=3 uid="uid://danb2d4gr6n5i"]

[ext_resource type="Script" uid="uid://deve37d1xwe76" path="res://Scripts/game.gd" id="1_gl6un"]
[ext_resource type="Texture2D" uid="uid://wvfittnxdfhj" path="res://Images/icon.svg" id="2_j5yw3"]
[ext_resource type="Theme" uid="uid://cqyysnug8sqms" path="res://Themes/Money.tres" id="3_j5yw3"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gl6un")
metadata/_edit_lock_ = true

[node name="Middle" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Loading" type="Label" parent="Middle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -27.5
offset_right = 218.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Connecting to Server..."

[node name="Party" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="PartyList" type="GridContainer" parent="Party"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -392.0
offset_bottom = 260.0
grow_horizontal = 0
columns = 3

[node name="Party-text" type="Label" parent="Party"]
layout_mode = 0
offset_left = -200.0
offset_top = 264.0
offset_right = -123.0
offset_bottom = 306.0
theme_override_font_sizes/font_size = 30
text = "Party"

[node name="LeftMenu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftMenuContainer" type="VBoxContainer" parent="LeftMenu"]
layout_mode = 0
offset_right = 182.0
offset_bottom = 246.0
scale = Vector2(1.3, 1.3)

[node name="Pc" type="Button" parent="LeftMenu/LeftMenuContainer"]
layout_mode = 2
text = "Personal Computer"

[node name="Settings" type="Button" parent="LeftMenu/LeftMenuContainer"]
layout_mode = 2
text = "Game Settings"

[node name="Logout" type="Button" parent="LeftMenu/LeftMenuContainer"]
layout_mode = 2
text = "Logout"

[node name="Server" type="Button" parent="LeftMenu/LeftMenuContainer"]
layout_mode = 2
text = "Leave Server"

[node name="Quit" type="Button" parent="LeftMenu/LeftMenuContainer"]
layout_mode = 2
text = "Exit Game"

[node name="Fullscreen" type="CheckButton" parent="LeftMenu/LeftMenuContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="Selecter" type="ScrollContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.790123
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
horizontal_scroll_mode = 2
metadata/_edit_use_anchors_ = true

[node name="BattleBox" type="HBoxContainer" parent="Selecter"]
unique_name_in_owner = true
layout_mode = 2

[node name="Top" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Money" type="Label" parent="Top"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -17.5
offset_right = 60.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_j5yw3")
theme_override_font_sizes/font_size = 25
text = "0$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mid" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Mid"]
texture = ExtResource("2_j5yw3")

[connection signal="pressed" from="LeftMenu/LeftMenuContainer/Pc" to="." method="PC"]
[connection signal="pressed" from="LeftMenu/LeftMenuContainer/Settings" to="." method="Settings"]
[connection signal="pressed" from="LeftMenu/LeftMenuContainer/Logout" to="." method="Logout"]
[connection signal="pressed" from="LeftMenu/LeftMenuContainer/Server" to="." method="Leave_Server"]
[connection signal="pressed" from="LeftMenu/LeftMenuContainer/Quit" to="." method="Quit"]
[connection signal="toggled" from="LeftMenu/LeftMenuContainer/Fullscreen" to="." method="Fullscreen_toggled"]
